itemCount: add component, with useState and create restriction for elements number

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -108,6 +108,8 @@
     }
     .navbar .container nav {
       top: 0; 
+      display: block;
+      position: relative;
     }
     .navbar .container nav ul {
       display: flex;
