--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -28,6 +28,20 @@
 .ItemDetail p{
     color: #325288;
 }
+.ItemDetail .GoCart {
+    color: #114e60;
+    max-width: 200px;
+    background-color: #f4eee8;
+    border: none;
+    width: 100%;
+    margin: 30px auto;
+    height: 32px;
+    cursor: pointer;
+}
+.ItemDetail .GoCart:hover {
+    background-color: hsla(30, 33%, 93%, 0.6);
+    border: 1px sold #f4eee8;
+}
 
 /*Media queries*/
 @media (min-width: 768px) {
