--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -69,3 +69,44 @@
     padding: 10px;
     cursor: pointer;
 }
+.Cart .Form {
+    max-width: 400px;
+    width: 90%;
+    margin: 20px auto;
+}
+.Cart .Form p{
+    max-width: 400px;
+    width: 90%;
+    margin: 20px auto;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+.Cart .Form form{
+    display: flex;
+    flex-direction: column;
+}
+.Cart .Form form label{
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+}
+.Cart .Form form input{
+    margin: 2px 0px 10px 0px;
+    padding: 10px 11px;
+    border: 1px solid #325288;
+    border-radius: 5px;
+}
+.Cart .Form form button{
+    background-color: #f4eee8;
+    color: #325288;
+    font-weight: 600;
+    width: 50%;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin: 2px auto 10px auto;
+    padding: 10px 11px;
+}
