--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -42,6 +42,35 @@
     background-color: hsla(30, 33%, 93%, 0.6);
     border: 1px sold #f4eee8;
 }
+/* Error - No existe el ID */
+.ItemDetail .DetailError{
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 80px);
+}
+.ItemDetail .DetailError h3{
+    color: #114e60;
+    text-align: center;
+    font-size: 30px;
+}
+.ItemDetail .DetailError p{
+    color: #325288;
+    text-align: center;
+    font-size: 15px;
+    padding: 15px;
+}
+.ItemDetail .DetailError button{
+    background-color: #f4eee8;
+    color: #325288;
+    border: none;
+    outline: none;
+    padding: 10px 20px;
+    text-align: center;
+}
 
 /*Media queries*/
 @media (min-width: 768px) {
